[metadata]
name = XDM
version = 1.0.0
author = Dennis Lutter
author-email = lad1337@gmail.com
summary = XDM: eXtendable Download Manager. Plugin based media collection manager.
description-file = README.md
home-page = https://github.com/lad1337/xdm
classifier =
    Environment :: Console
    Intended Audience :: Developres
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: Software Development :: Libraries

[bdist_wheel]
universal = true

[entry_points]
console_scripts =
  xdm-server = xdm:run
